# bayesian-control-tower

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
notebooks/: 01_bayesian_exploration.ipynb
src/bayesian_control_tower/: __init__.py  config.py  server.py
src/bayesian_control_tower/agent/: __init__.py  bayesian_agent.py  executor.py  memory.py
src/bayesian_control_tower/models/: __init__.py  schemas.py
src/bayesian_control_tower/services/: __init__.py  model_registry.py
tests/: conftest.py  test_agent.py  test_schemas.py  test_server.py
