[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bayesian-control-tower"
version = "0.1.0"
description = "Bayesian control layer A2A server for multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # A2A Protocol server SDK — http-server extra adds starlette + sse-starlette
    "a2a-sdk[http-server]>=1.1.0",
    # Google ADK 2.2
    "google-adk>=2.2.0",
    # LLM providers
    "anthropic>=0.109.0",
    "openai>=2.42.0",
    "litellm>=1.89.0",
    # Validation & settings
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    # Server runtime
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
    # Utilities
    "python-dotenv>=1.2.0",
    "structlog>=26.1.0",
]

[project.scripts]
serve = "bayesian_control_tower.server:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "commitizen>=4.16.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/bayesian_control_tower"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
